--- a/EC2Launch/ansible-aws-provisioning/vars/aws-creds.yml
+++ b/EC2Launch/ansible-aws-provisioning/vars/aws-creds.yml
@@ -1,5 +1,5 @@
 ---
 # this file can be encrypted with ansible-vault
 
-ec2_access_key: XXXXXXXXXXXX 
-ec2_secret_key: YYYYYYYYYYYYYYYYYYYYYYY
+ec2_access_key: AKIAILP74NPUTQNXBLIA
+ec2_secret_key: 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
