--- a/EC2Launch/ansible-aws-provisioning/vars/dev-environment.yml
+++ b/EC2Launch/ansible-aws-provisioning/vars/dev-environment.yml
@@ -1,8 +1,8 @@
 ---
 # set these parameters to control the region, keypair, and AMI that are launched
-ec2_region: us-east-2
-instances_keypair: deepak2717 
-image_id: ami-03291866
+ec2_region: us-east-1
+instances_keypair: Ansible 
+image_id: ami-0de53d8956e8dcf80
 
 # security groups to be created
 security_groups:
